--- a/BUSCADOR_ML.ipynb
+++ b/BUSCADOR_ML.ipynb
@@ -48,9 +48,9 @@
    "outputs": [],
    "source": [
     "# correccion precisa de la cantidad, solo usar para valores bajos de articulos encontrados\n",
-    "#df_final['sold_quantity'] = df_final.apply(lambda row: retrieve_sold_from_link(row['permalink']) , axis=1)\n",
-    "#df_final['total'] = df_final['price'] * df_final['sold_quantity']\n",
-    "#display(HTML(df_final.loc[:, ['title', 'listing_type_id','price','sold_quantity','total','state','city','thumbnail','permalink','seller_id','free_shipping']].sort_values('total',ascending=False).to_html(border=1, escape=False ,formatters=dict(thumbnail=path_to_image_html,permalink=path_to_link_html))))"
+    "df_final['sold_quantity'] = df_final.apply(lambda row: retrieve_sold_from_link(row['permalink']) , axis=1)\n",
+    "df_final['total'] = df_final['price'] * df_final['sold_quantity']\n",
+    "display(HTML(df_final.loc[:, ['title', 'listing_type_id','price','sold_quantity','total','state','city','thumbnail','permalink','seller_id','free_shipping']].sort_values('total',ascending=False).to_html(border=1, escape=False ,formatters=dict(thumbnail=path_to_image_html,permalink=path_to_link_html))))"
    ]
   }
  ],
